# panorama-indexing-localization

./: .gitignore  LICENSE.md  README.md  conda_panorama.yml  config.example.py  custom_layers.py  evaluate_lib.py  extract_features.py  flann_autotuned.py  flann_evaluation.py  pq_evaluation.py  requirements.txt  semantic_evaluation.py  tree_lib.py
data/: room_labels.csv
evaluation_scripts/: dataset_aggregation_evaluation.sh  dataset_subsampling_evaluation.sh  dbh_evaluation.sh  flann_autotune.sh  flann_evaluation.sh  get_number_rooms.py  pq_evaluation.sh  sbh_evaluation.sh
flann/: README.md
flann/src/cpp/flann/: flann.cpp  flann.h
flann/src/cpp/flann/algorithms/: autotuned_index.h  composite_index.h  hierarchical_clustering_index.h  kdtree_cuda_3d_index.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  nn_index.h
flann/src/python/pyflann/: flann_ctypes.py
prepare_datasets/: add_room_labels_inloc.py  combine_datasets_matterport.py  combine_query_db_inloc.m  dataset_resampling.py  download_inloc.py  download_matterport.sh  extract_features.sh  prepare_panorama_poses_inloc.m  prepare_queries_inloc.m  render_panos_inloc.m  render_panos_matterport.m  render_views.sh
prepare_datasets/utils/: create_json_structure.m  im2Sphere.m  process_dataset.m  write_to_json.m
view_rendering/: CMakeLists.txt  io_helpers.cpp  io_helpers.h  projection_helpers.cpp  projection_helpers.h  render_views_from_pano_inloc.cpp  render_views_from_pano_matterport.cpp  rendering_tools.cpp  rendering_tools.h
